@@ -1,10 +1,28 @@
-#ifndef _FENV_H
-#define _FENV_H
+#ifndef _FENV_H_
+#define _FENV_H_
 
+
+/* FPU status word exception flags */
+#define FE_INVALID	0x01
+#define FE_DENORMAL	0x02
+#define FE_DIVBYZERO	0x04
+#define FE_OVERFLOW	0x08
+#define FE_UNDERFLOW	0x10
+#define FE_INEXACT	0x20
+#define FE_ALL_EXCEPT (FE_INVALID | FE_DENORMAL | FE_DIVBYZERO \
+		       | FE_OVERFLOW | FE_UNDERFLOW | FE_INEXACT)
+
+/* FPU control word rounding flags */
+#define FE_TONEAREST	0x0000
+#define FE_DOWNWARD	0x0400
+#define FE_UPWARD	0x0800
+#define FE_TOWARDZERO	0x0c00
+
+#ifndef RC_INVOKED
 /*
   For now, support only for the basic abstraction of flags that are
-  either set or clear. fexcept_t could be  structure that holds more info
-  about the fp environment.
+  either set or clear. fexcept_t could be  structure that holds more
+  info about the fp environment.
 */
 typedef unsigned short fexcept_t;
 
@@ -27,23 +45,6 @@ typedef struct
 } fenv_t;
 
 
-/* FPU status word exception flags */
-#define FE_INVALID	0x01
-#define FE_DENORMAL	0x02
-#define FE_DIVBYZERO	0x04
-#define FE_OVERFLOW	0x08
-#define FE_UNDERFLOW	0x10
-#define FE_INEXACT	0x20
-#define FE_ALL_EXCEPT (FE_INVALID | FE_DENORMAL | FE_DIVBYZERO \
-		       | FE_OVERFLOW | FE_UNDERFLOW | FE_INEXACT)
-
-/* FPU control word rounding flags */
-#define FE_TONEAREST	0x0000
-#define FE_DOWNWARD	0x0400
-#define FE_UPWARD	0x0800
-#define FE_TOWARDZERO	0x0c00
-
-
 /*The C99 standard (7.6.9) allows us to define implementation-specific macros for
   different fp environments */
   
@@ -57,11 +58,9 @@ typedef struct
   fesetenv will use the environment set at app startup.*/
 #define FE_DFL_ENV ((const fenv_t *) 0)
 
-#ifndef RC_INVOKED
 #ifdef __cplusplus
 extern "C" {
 #endif
-
 
 /*TODO: Some of these could be inlined */
 /* 7.6.2 Exception */
@@ -72,12 +71,10 @@ extern int feraiseexcept (int excepts );
 extern int fesetexceptflag (const fexcept_t *, int);
 extern int fetestexcept (int excepts);
 
-
 /* 7.6.3 Rounding */
 
 extern int fegetround (void);
 extern int fesetround (int mode);
-
 
 /* 7.6.4 Environment */
 
